Basic scenario support

--- a/app/components/lookbook/ui/tab_group/tab_group.html.erb
+++ b/app/components/lookbook/ui/tab_group/tab_group.html.erb
@@ -3,7 +3,7 @@
   x: {
     "data": "tabGroup('#{id}')",
     "on:sl-tab-show": "activeTab = $event.detail.name",
-    "on:lookbook:morph.document": "selectTab"
+    "on:lookbook:page-morph.document": "selectTab"
   }) do %>
   <sl-tab-group>
     <%= safe_join(tabs) %>
