--- a/app/views/lookbook/inspector/scenario.html.erb
+++ b/app/views/lookbook/inspector/scenario.html.erb
@@ -7,6 +7,7 @@
       
       <% group.with_tab("output", label: "Output") do %>
         <%= @preview.label %> / <%= @scenario.label %>  output
+        <%= Time.now %>
       <% end %>
     <% end %>
   <% end %>
