--- a/assets/css/tokens.css
+++ b/assets/css/tokens.css
@@ -1,3 +1,7 @@
 :root {
-  --lookbook-color-divider: var(--sl-color-neutral-300);
+  --lookbook-toolbar-height: 40px;
+  --lookbook-toolbar-icon-button-size: 18px;
+  --lookbook-toolbar-icon-button-color: var(--sl-color-neutral-400);
+
+  --lookbook-divider-color: var(--sl-color-neutral-300);
 }
