--- a/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
+++ b/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
@@ -1,7 +1,12 @@
 <%= render component_tag(:sl_tree,
   id: id,
   selection: "leaf",
-  x: {"data": "navTree('#{id}')", "@sl-selection-change": "itemSelected($event)"}) do %>
+  x: {
+    "data": "navTree('#{id}')",
+    "@sl-selection-change": "itemSelected($event)",
+    "@sl-expand": "itemExpanded($event)",
+    "@sl-collapse": "itemCollapsed($event)"
+  }) do %>
   <% children.each do |node| %>
     <%= lb_nav_tree_item(node) %>
   <% end %>
