--- a/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
+++ b/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
@@ -5,7 +5,8 @@
     "data": "navTree('#{id}')",
     "@sl-selection-change": "itemSelected($event)",
     "@sl-expand": "itemExpanded($event)",
-    "@sl-collapse": "itemCollapsed($event)"
+    "@sl-collapse": "itemCollapsed($event)",
+    "@lookbook:page-update.document": "selectCurrentPageItem(false)"
   }) do %>
   <% children.each do |node| %>
     <%= lb_nav_tree_item(node) %>
