--- a/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
+++ b/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
@@ -6,7 +6,8 @@
     "@sl-selection-change": "itemSelected($event)",
     "@sl-expand": "itemExpanded($event)",
     "@sl-collapse": "itemCollapsed($event)",
-    "@lookbook:page-update.document": "selectCurrentPageItem(false)"
+    "@lookbook:page-update.document": "selectCurrentPageItem(false)",
+    "@lookbook:page-load.document": "selectCurrentPageItem(true)"
   }) do %>
   <% children.each do |node| %>
     <%= lb_nav_tree_item(node) %>
