--- a/app/components/lookbook/ui/nav_tree_item/nav_tree_item.html.erb
+++ b/app/components/lookbook/ui/nav_tree_item/nav_tree_item.html.erb
@@ -1,12 +1,10 @@
 <%= render component_tag(:sl_tree_item,
-  href: inspect_path,
-  key: lookup_path,
+  href: nav_path,
+  key: key,
   x: {"data": "navTreeItem"}
 ) do %>
   <sl-icon name="<%= icon %>"></sl-icon>
-
   <%= label %>
-  
   <% children&.each do |node| %>
     <%= lb_nav_tree_item(node) %>
   <% end %>
