--- a/app/components/lookbook/ui/code/code.html.erb
+++ b/app/components/lookbook/ui/code/code.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(:code) do %>
+<%= render component_tag(:code, x: {data: "code"}) do %>
   <pre><%= raw source %></pre>
 <% end %>
