Code panel tweaks

--- a/app/components/lookbook/ui/code/code.html.erb
+++ b/app/components/lookbook/ui/code/code.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(:code, x: {data: "code"}) do %>
-  <pre><%= raw source %></pre>
+<%= render component_tag(x: {data: "code"}) do %>
+  <pre><code><%= raw source %></code></pre>
 <% end %>
