--- a/app/components/lookbook/ui/inspector/panels/preview_panel/preview_panel.html.erb
+++ b/app/components/lookbook/ui/inspector/panels/preview_panel/preview_panel.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(x: {data: "previewPanel"}) do %>
+<%= lb_inspector_panel(**tag_attrs,  x: {data: "previewPanel"}, data: {panel: "preview"}) do |panel| %>  
   <%= lb_viewport(src) %>
 <% end %>
