Refactor tree building

--- a/app/components/lookbook/ui/nav_tree/nav_tree_item/nav_tree_item.html.erb
+++ b/app/components/lookbook/ui/nav_tree/nav_tree_item/nav_tree_item.html.erb
@@ -1,6 +1,6 @@
 <%= render component_tag(:sl_tree_item,
   href: nav_path,
-  key: key,
+  key: lookup_path,
   x: {"data": "navTreeItem"}
 ) do %>
   <sl-icon name="<%= icon %>"></sl-icon>
