--- a/app/views/lookbook/previews/overview.html.erb
+++ b/app/views/lookbook/previews/overview.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @preview.label %></h1>
 
 <ul>
-<% @preview.inspectables.each do |target| %>
+<% @preview.inspector_targets.each do |target| %>
   <li>
     <%= link_to target.label, inspector_path(@preview, target) %>
   </li>
