--- a/app/views/lookbook/inspector/preview.html.erb
+++ b/app/views/lookbook/inspector/preview.html.erb
@@ -1,6 +1,6 @@
 
-<% @target.scenarios_with_output do |scenario, output_html| %>
-  <% if @target.scenarios.many? %>
+<% target.each_scenario_with_output do |scenario, output_html| %>
+  <% if target.scenarios.many? %>
   <div>
     <h1><%= scenario.label %></h1>
     <div>
