--- a/app/components/lookbook/ui/inspector/inspector.html.erb
+++ b/app/components/lookbook/ui/inspector/inspector.html.erb
@@ -6,10 +6,10 @@
     @sl-reposition="drawerPosition = $el.position"
     vertical>
     <div slot="start">
-      <%= viewer %>
+      <%= preview_pane %>
     </div>
     <div slot="end">
-      <%= drawer %>
+      <%= drawer_pane %>
     </div>
   </sl-split-panel>
 <% end %>
