--- a/app/components/lookbook/ui/inspector/code_panel/code_panel.css
+++ b/app/components/lookbook/ui/inspector/code_panel/code_panel.css
@@ -1,6 +1,4 @@
-[data-panel="code"] {
-  height: 100%;
-
+[data-component="panel"][data-panel="code"] {
   .code-panel-code {
     height: 100%;
     overflow: auto;
