--- a/app/views/lookbook/inspector/show.html.erb
+++ b/app/views/lookbook/inspector/show.html.erb
@@ -1,26 +1,25 @@
-<%= lb_inspector(id: "inspector") do |inspector| %>
-  <% inspector.with_viewer do |viewer| %>
-    <% viewer.with_tab("preview", label: "Preview") do %>
-      <%= lb_preview_panel(id: dom_id(@target, :preview), src: inspector_preview_path(@preview, @target)) %>
-    <% end %>
-    
-    <% viewer.with_tab("output", label: "Output") do %>
-      <%= lb_code_panel(id: dom_id(@target, :output)) do %>
-        <%= render template: @inspector.output_template, locals: {preview: @preview, target: @target} %>
-      <% end %>
-    <% end %>
-  <% end %>  
+<%=
+  lb_inspector(id: "inspector") do |layout|
 
-  <% inspector.with_drawer do |drawer| %>
-    <% drawer.with_tab("source", label: "Source") do |tab| %>
-      <%= lb_code_panel(id: dom_id(@target, :source)) do %>
-        <%= render template: @inspector.source_template, locals: {preview: @preview, target: @target} %>
-      <% end %>
-    <% end %>
-    
-    <% drawer.with_tab("notes", label: "Notes") do %>
-      <%= render template: @inspector.notes_template, locals: {preview: @preview, target: @target} %>
-    <% end %>
-  <% end %>  
-<% end %>
+    layout.with_preview_pane do |pane|
+      @inspector.preview_panels.each do |panel|
+        pane.with_tab(panel.name, label: panel.label) do
+          lb_inspector_panel(panel.type, id: dom_id(@target, "panel-#{panel.name}")) do
+            render panel.partial, preview: @preview, target: @target
+          end
+        end
+      end
+    end
+
+    layout.with_drawer_pane do |pane|
+      @inspector.drawer_panels.each do |panel|
+        pane.with_tab(panel.name, label: panel.label) do
+          lb_inspector_panel(panel.type, id: dom_id(@target, "panel-#{panel.name}")) do
+            render panel.partial, preview: @preview, target: @target
+          end
+        end
+      end
+    end
+  end
+%>
   
