--- a/app/views/lookbook/previews/overview.html.erb
+++ b/app/views/lookbook/previews/overview.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @preview.label %></h1>
 
 <ul>
-<% @inspector.preview_targets(@preview).each do |target| %>
+<% @targets.each do |target| %>
   <li>
     <%= link_to target.label, target.inspect_path %>
   </li>
