--- a/app/components/lookbook/ui/app/app.html.erb
+++ b/app/components/lookbook/ui/app/app.html.erb
@@ -1,8 +1,8 @@
 <%= render component_tag(
   id: "app",
   x: {
-    "data": "app({eventsEndpoint: #{events_endpoint.to_json}})",
-    "on:click.document": "hijackNavigation"
+    "data": "app",
+    "@click.document": "hijackNavigation"
   }) do %>
   <header class="app-header">
     <%= header %>
