--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -6,13 +6,19 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+  <% if @events_endpoint %>
+    <script>
+      LOOKBOOK_SSE_ENDPOINT = "<%= @events_endpoint %>";
+    </script>
+  <% end %> 
+
   <link href="<%= lookbook_asset_path("/app.css") %>" rel="stylesheet">
   <script src="<%= lookbook_asset_path("/app.js") %>" defer></script> 
   
   <title>Lookbook</title>
 </head>
 <body>
-  <%= lb_app(events_endpoint: @events_endpoint) do |layout| %>
+  <%= lb_app do |layout| %>
     <% layout.with_header do %>
       <%= link_to @config.project_name, root_path %>
     <% end %>
