--- a/app/components/lookbook/ui/nav_tree/nav_tree_item/nav_tree_item.html.erb
+++ b/app/components/lookbook/ui/nav_tree/nav_tree_item/nav_tree_item.html.erb
@@ -1,7 +1,11 @@
 <%= render component_tag(:sl_tree_item,
   href: nav_path,
   key: lookup_path,
-  x: {"data": "navTreeItem"}
+  x: {
+    "data": "navTreeItem",
+    "@click": "itemClicked",
+  },
+  "nav-tree-index": (index? ? true : nil)
 ) do %>
   <sl-icon name="<%= icon %>"></sl-icon>
   <%= label %>
