--- a/app/components/lookbook/ui/layouts/app/app.html.erb
+++ b/app/components/lookbook/ui/layouts/app/app.html.erb
@@ -1,9 +1,4 @@
-<%= render component_tag(
-  id: "app",
-  x: {
-    "data": "app",
-    "@click.document": "hijackNavigation"
-  }) do %>
+<%= render component_tag(id: "app", x: {"data": "app"}) do %>
   <header class="app-header">
     <%= header %>
   </header>
