Change component helper prefix to `lookbook_`

--- a/app/components/lookbook/ui/layouts/preview_inspector/code_panel/code_panel.html.erb
+++ b/app/components/lookbook/ui/layouts/preview_inspector/code_panel/code_panel.html.erb
@@ -4,7 +4,7 @@
   <% end %>
   
   <div class="code-panel-code">
-    <%= lb_code { content } %>
+    <%= lookbook_code { content } %>
   </div>
   <div id="<%= copy_target_id %>" class="code-panel-raw"><%= raw copy_source %></div>
 <% end %>
