--- a/app/components/lookbook/ui/layouts/preview_overview/preview_overview.html.erb
+++ b/app/components/lookbook/ui/layouts/preview_overview/preview_overview.html.erb
@@ -3,7 +3,7 @@
   x: {
     data: "previewOverview"
   }) do %>
-  <%= lb_pane(id: "#{id}-#{preview.id}-pane") do |pane| %>
+  <%= lookbook_pane(id: "#{id}-#{preview.id}-pane") do |pane| %>
     
     <% pane.with_title do %>
       <sl-icon name="layers" class="po-icon"></sl-icon>
