--- a/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
+++ b/app/components/lookbook/ui/nav_tree/nav_tree.html.erb
@@ -9,6 +9,6 @@
     "@lookbook:page-load.document": "selectCurrentPageItem(true)"
   }) do %>
   <% children.each do |node| %>
-    <%= lb_nav_tree_item(node) %>
+    <%= lookbook_nav_tree_item(node) %>
   <% end %>
 <% end %>
