--- a/app/components/lookbook/ui/nav_tree/nav_tree_item/nav_tree_item.html.erb
+++ b/app/components/lookbook/ui/nav_tree/nav_tree_item/nav_tree_item.html.erb
@@ -9,6 +9,6 @@
   <sl-icon name="<%= icon %>"></sl-icon>
   <%= label %>
   <% children&.each do |node| %>
-    <%= lb_nav_tree_item(node) %>
+    <%= lookbook_nav_tree_item(node) %>
   <% end %>
 <% end %>
