--- a/app/components/lookbook/ui/tabbed_pane/tabbed_pane.html.erb
+++ b/app/components/lookbook/ui/tabbed_pane/tabbed_pane.html.erb
@@ -4,7 +4,7 @@
       <%= safe_join(actions.reverse) %>
     </sl-button-group>
   </div>
-  <%= lb_tab_group(id: tab_group_id, class: "pane-tabs") do |group| %>
+  <%= lookbook_tab_group(id: tab_group_id, class: "pane-tabs") do |group| %>
     <% tabs_data.each do |tab| %>
       <% group.with_tab(tab[:name], **tab[:kwargs], &tab[:block]) %>
     <% end %>
