--- a/app/views/lookbook/inspector/panels/_output.html.erb
+++ b/app/views/lookbook/inspector/panels/_output.html.erb
@@ -1,5 +1,5 @@
 
-<% target.each_scenario_with_output do |scenario, output_html| %>
+<% target.scenarios_with_output do |scenario, output_html| %>
 <% if target.scenarios.many? %>
 <!-- <%= scenario.label %> -->
 <%= output_html %>
